fix: adjust text, select, and dropdown menu overflows, spacing, and add loading animation to weather data search

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,4 +88,32 @@ body {
 	min-height: 100dvh;
 	max-width: 1440px;
 	margin: 0 auto;
+	overflow-y: scroll;
+	box-sizing: content-box;
+}
+
+@keyframes bounce {
+	0%,
+	100% {
+		transform: translateY(0);
+		opacity: 0.6;
+	}
+	50% {
+		transform: translateY(-20px);
+		opacity: 1;
+	}
+}
+
+.dot {
+	animation: bounce 0.7s infinite ease-in-out;
+}
+
+.dot:nth-child(1) {
+	animation-delay: 0s;
+}
+.dot:nth-child(2) {
+	animation-delay: 0.15s;
+}
+.dot:nth-child(3) {
+	animation-delay: 0.3s;
 }
